started fighting with some circles in the header

--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div id="mainDiv">
+        <!-- header div containing circles with overview of every group member and their plants -->
+        <header>
+            <div id="headerDiv">
+                <div id="circleOverview">
+                    <div id="newMember" class="headerCircles"></div>
+                </div>
+                <div id="myPlantDiv">
+                    <div id="myPlantDiv" class="headerCircles">
+                    </div>
+                </div>
+             </div>
+        </header>
+        <div></div>
+
+    </div>
     
     
 </body>
