fought some more with the circles..

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
                     <div id="newMember" class="headerCircles"></div>
                 </div>
                 <div id="myPlantDiv">
-                    <div id="myPlantDiv" class="headerCircles">
+                    <div id="myPlantCircle">
                     </div>
                 </div>
              </div>
