--- a/main.html
+++ b/main.html
@@ -12,11 +12,13 @@
         <header>
             <div id="headerDiv">
                 <div id="circleOverview">
-                    <div id="newMember" class="headerCircles"></div>
+                    <div class="headerCircles"></div>
+                    <div id="newMemberC"></div>
                 </div>
                 <div id="myPlantDiv">
                     <div id="myPlantCircle">
                     </div>
+                    <div id="myPlantTxt" class="circleTxt">My plant</div>
                 </div>
              </div>
         </header>
