still fighting with the circles

--- a/main.html
+++ b/main.html
@@ -11,16 +11,27 @@
         <!-- header div containing circles with overview of every group member and their plants -->
         <header>
             <div id="headerDiv">
-                <div id="circleOverview">
-                    <div class="headerCircles"></div>
-                    <div id="newMemberC"></div>
+                    <div id="circleOverview">
+
+                        <div class="circleDiv">
+                            <div class="headerCircles">
+                            </div>
+                            <div class="circleTxt">Member 1</div>
+                        </div>
+
+                        <div class="circleDiv">
+                            <div id="newMemberC">
+                                <div id="plusIco">+</div>
+                            </div>
+                            <div class="circleTxt">New member</div>
+                        </div>
                 </div>
                 <div id="myPlantDiv">
                     <div id="myPlantCircle">
                     </div>
                     <div id="myPlantTxt" class="circleTxt">My plant</div>
                 </div>
-             </div>
+            </div>
         </header>
         <div></div>
 
