--- a/main.html
+++ b/main.html
@@ -11,20 +11,21 @@
         <!-- header div containing circles with overview of every group member and their plants -->
         <header>
             <div id="headerDiv">
+                <div id="newMemberDiv">
+                    <div class="circleDiv">
+                        <div id="newMemberC">
+                            <div id="plusIco">+</div>
+                        </div>
+                        <div class="circleTxt">New member</div>
+                    </div>
+                </div>
                     <div id="circleOverview">
-
                         <div class="circleDiv">
                             <div class="headerCircles">
                             </div>
-                            <div class="circleTxt">Member 1</div>
+                            <div class="circleTxt">Member 3</div>
                         </div>
-
-                        <div class="circleDiv">
-                            <div id="newMemberC">
-                                <div id="plusIco">+</div>
-                            </div>
-                            <div class="circleTxt">New member</div>
-                        </div>
+                        
                 </div>
                 <div id="myPlantDiv">
                     <div id="myPlantCircle">
