linked some docs

--- a/main.html
+++ b/main.html
@@ -12,12 +12,14 @@
         <header>
             <div id="headerDiv">
                 <div id="newMemberDiv">
-                    <div class="circleDiv">
-                        <div id="newMemberC">
-                            <div id="plusIco">+</div>
+                    <a href="createGroup.html">
+                        <div class="circleDiv">
+                            <div id="newMemberC">
+                                <div id="plusIco">+</div>
+                            </div>
+                            <div class="circleTxt">New member</div>
                         </div>
-                        <div class="circleTxt">New member</div>
-                    </div>
+                     </a>
                 </div>
                     <div id="circleOverview">
                         <div class="circleDiv">
