started on newMember creates div

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <header>
             <div id="headerDiv">
                 <div id="newMemberDiv">
-                    <a href="createGroup.html">
+                    <a href="index.html">
                         <div class="circleDiv">
                             <div id="newMemberC">
                                 <div id="plusIco">+</div>
@@ -22,13 +22,9 @@
                      </a>
                 </div>
                     <div id="circleOverview">
-                        <div class="circleDiv">
-                            <div class="headerCircles">
-                            </div>
-                            <div class="circleTxt">Member 3</div>
-                        </div>
                         
-                </div>
+                        <script src="JS/createUser.js"></script>
+                    </div>
                 <div id="myPlantDiv">
                     <div id="myPlantCircle">
                     </div>
