idk what i did here

--- a/main.html
+++ b/main.html
@@ -59,6 +59,10 @@
                 </div>
 
             </div>
+
+            <div id="feedDiv">
+                <h1>Feed</h1>
+            </div>
         </body>
         <footer>
 
