added requirement to inputs

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <form onsubmit = "createNewUser(event)">
         <div id="createUserDiv">
             <h4>Register new user</h4>
-            <input id="userNameInput" name="username" type="text" placeholder="username">
-            <input id="passwordInput" name="password" type="password" placeholder="password">
-            <input id="passwordInput_2" name="password_2" type="password" placeholder="repeat password">
+            <input id="userNameInput" name="username" type="text" placeholder="username" required>
+            <input id="passwordInput" name="password" type="password" placeholder="password" required>
+            <input id="passwordInput_2" name="password_2" type="password" placeholder="repeat password" re>
             <input id="submitUserBtn" type="submit">
             <a href="login.html">
                 <p>Already registered? Log in here</p>
