--- a/main.html
+++ b/main.html
@@ -28,6 +28,12 @@
                             </div>
                             <div class="circleTxt">Bruker</div>
                         </div>
+                        
+                        <div class="circleDiv">
+                            <div class="headerCircles">
+                            </div>
+                            <div class="circleTxt">Benjamin</div>
+                        </div>
 
 
 
