renderUserList prints random colored circle

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
                 </div>
                     <div id="circleOverview">
                         
-                        <div class="circleDiv">
+                        <!-- <div class="circleDiv">
                             <div class="headerCircles">
                             </div>
                             <div class="circleTxt">Bruker</div>
@@ -33,7 +33,7 @@
                             <div class="headerCircles">
                             </div>
                             <div class="circleTxt">Benjamin</div>
-                        </div>
+                        </div> -->
 
                         <script src="JS/createUser.js"></script>
                     </div>
