--- a/main.html
+++ b/main.html
@@ -49,7 +49,8 @@
             <div id="bodyDiv">
                 <div id="quoteDiv"></div>
                 <div id="progressBoard">
-                    <div id="toDoColumn" class="progressColumns">
+                    <div id="toDoColumn" class="progressColumns"
+                    ondrop="drop_handler(event);" ondragover="dragover_handler(event);" >
                         &nbsp &nbsp To do
                         <div></div>
                     </div>
