Added counter for each column and select value when you create a task for members

--- a/main.html
+++ b/main.html
@@ -82,7 +82,9 @@
                     <input type="text" placeholder="Enter Task Description" name="taskDescription" required><br><br>
  
                     <label for="assignMember"> <b>Assign Member</b></label>
-                    <input type="text" placeholder="Enter member name" name="assignMember" required><br><br>
+                    <select id="selectMember"></select>
+                    
+                    <br><br>
  
                     <button type="submit" class="cancelbtn" onclick="openForm()">Cancel</button>
                     <button type="submit" class="createbtn">Create task</button>
