--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                         <script src="JS/createUser.js"></script>
                     </div>
                 <div id="myPlantDiv">
-                    <div id="myPlantCircle">
+                    <div id="myProfileCircle">
                     </div>
                     <div id="myPlantTxt" class="circleTxt">My plant</div>
                 </div>
