edited from css

--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
             <div class="form-popup" id="form">
             
                 <form class="form-container" onsubmit="createTask(event)">
-                    <h1>Create task</h1>
+                    <h1>New task</h1>
                     <p>Fill in this form to create a task!</p>
                     <label for="taskName"> <b>Task Name</b></label>
                     <input type="text" placeholder="Enter Task Name" name="taskName" required><br><br>
