some adjustments in pop-up

--- a/main.html
+++ b/main.html
@@ -70,14 +70,14 @@
             
                 <form class="form-container" onsubmit="createTask(event)">
                     <h1>New task</h1>
-                    <p>Fill in this form to create a task!</p>
-                    <label for="taskName"> <b>Task Name</b></label>
+                    <p>Fill in this form to create a new task:</p>
+                    <label for="taskName"> <b>Task title</b></label>
                     <input type="text" placeholder="Enter Task Name" name="taskName" required><br><br>
 
-                    <label for="taskDescription"> <b>Task Description</b></label>
+                    <label for="taskDescription"> <b>Task description</b></label>
                     <input type="text" placeholder="Enter Task Description" name="taskDescription" required><br><br>
  
-                    <label for="assignMember"> <b>Assign Member</b></label>
+                    <label for="assignMember"> <b>Assign to member</b></label>
                     <input type="text" placeholder="Enter member name" name="assignMember" required><br><br>
  
                     <button type="submit" class="cancelbtn" onclick="openForm()">Cancel</button>
