Testing out functions to render task assigned to one member

--- a/main.html
+++ b/main.html
@@ -67,6 +67,10 @@
 
             <div id="feedDiv">
                 <h1>Feed</h1>
+                <div id ="toDoFeed">hey</div>
+                <div id = "inProgFeed">heyy</div>
+                <div id = "compFeed">heyyy</div>
+
             </div>
 
             <button class="open-button" onclick="openForm()">Create Task</button>
@@ -82,7 +86,7 @@
                     <input type="text" placeholder="Enter Task Description" name="taskDescription" required><br><br>
  
                     <label for="assignMember"> <b>Assign Member</b></label>
-                    <select id="selectMember"></select>
+                    <select id="selectMember"name ="assignMember"></select>
                     
                     <br><br>
  
