cleaned up some small things

--- a/main.html
+++ b/main.html
@@ -78,7 +78,7 @@
                     <input type="text" placeholder="Enter Task Description" name="taskDescription" required><br><br>
  
                     <label for="assignMember"> <b>Assign to member</b></label>
-                    <input type="text" placeholder="Enter member name" name="assignMember" required><br><br>
+                    <select id="selectMember"name ="assignMember"></select><br><br>
  
                     <button type="submit" class="cancelbtn" onclick="openForm()">Cancel</button>
                     <button type="submit" class="createbtn">Create task</button>
