adjustments on index.css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="loginDiv">
                 <input id="usernameLogin" name="usernameLogin" type="text" placeholder="USERNAME" required>
                 <input id="passwordLogin" name="passwordLogin" type="password" placeholder="PASSWORD" required>
-                <input id="submitLogin" type="submit">
+                <input id="submitLogin" type="button" value="Log in">
             </div>
                 <script src="JS/loginUser.js"></script>
         </form>
@@ -50,6 +50,8 @@
                 <div id="createUserDiv">
                     <h3 class="createMemberP">Register new user</h3>
                     <input id="userNameInput" name="username" type="text" placeholder="username">
+                    <br>
+                    <br>
                     <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
 
                     <input id="passwordInput_2" name="password_2" type="password" placeholder="repeat password">
