fixed login issue

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="loginDiv">
                 <input id="usernameLogin" name="usernameLogin" type="text" placeholder="USERNAME" required>
                 <input id="passwordLogin" name="passwordLogin" type="password" placeholder="PASSWORD" required>
-                <input id="submitLogin" type="button" value="Log in">
+                <input id="submitLogin" type="submit" value="Log in">
             </div>
                 <script src="JS/loginUser.js"></script>
         </form>
