class and id cleanup

--- a/main.html
+++ b/main.html
@@ -25,11 +25,13 @@
 
                         <script src="JS/createUser.js"></script>
                     </div>
-                <div id="myPlantDiv">
-                    <div id="myProfileCircle">
-                    </div>
-                    <div id="myPlantTxt" class="circleTxt">My plant</div>
-                </div>
+                    <a href="userProfile.html">
+                        <div id="myPlantDiv">
+                            <div id="myProfileCircle">
+                            </div>
+                            <div id="myPlantTxt" class="circleTxt">My plant</div>
+                        </div>
+                    </a>
             </div>
         </header>
 
