--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <script src="JS/loginUser.js"></script>
         </form>
         
-        <button id="collapsible">New? Register here</button>
+        <button class="collapsible">New? Register here</button>
         
         <div class="content">
 
