confirm-message in create user

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <form onsubmit = "createNewUser(event)">
                 <div id="createUserDiv">
                     <h3 class="createMemberP">Register new user</h3>
+                    <br>
                     <input id="userNameInput" name="username" type="text" placeholder="username">
                     <br>
                     <br>
@@ -60,11 +61,14 @@
             </form>
 
             <div id="message">
+                <br>
                 <h3 class="passwordTitle">Password must contain the following:</h3>
                     <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
                     <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
                     <p id="number" class="invalid">A <b>number</b></p>
                     <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                    <br>
+                    <div id="confirmMsg">User created successfully</div>
             </div>
             <script src="JS/loginUser.js"></script>
             <script src="JS/createUser.js"></script>
