--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p id="number" class="invalid">A <b>number</b></p>
                     <p id="length" class="invalid">Minimum <b>8 characters</b></p>
                     <br>
-                    <div id="confirmMsg">User created successfully</div>
+                    <div id="confirmMsg">User created successfully!</div>
             </div>
             <script src="JS/loginUser.js"></script>
             <script src="JS/createUser.js"></script>
