fixed view all button

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                         </div>
                      </a>
                      <div class="circleDiv">
-                        <div id="viewAllC" onsubmit="renderAll(event)">
+                        <div id="viewAllC" onclick="renderAll(event)">
                         </div>
                         <div class="circleTxt">View all</div>
                     </div>
