userprofile now displays name of logged in user

--- a/userProfile.html
+++ b/userProfile.html
@@ -28,8 +28,8 @@
            
             <div class="progress">
                 <div class="box1">
-                        <h3 id="username">Maria-José</h3>
-                        <script src="JS/createUser.js"></script>
+                        <h3 id="username"></h3>
+                        <script src="JS/userprofile.js"></script>
                 <div class="fact-box">
                     <p class="factP">
                         Rubber tree plants are a fast-growing species of broadleaf evergreen tree called Ficus elastica. <br><br>They are native to the rainforest region of South America. Rubber plant requires plenty of light to thrive but can survive in less than ideal conditions for a while.
