trying to find a rogue -

--- a/main.html
+++ b/main.html
@@ -20,11 +20,12 @@
                             <div class="circleTxt">New member</div>
                         </div>
                      </a>
+                     
                      <div class="circleDiv">
-                        <div id="viewAllC" onsubmit="renderAll(event)">
-                        </div>
+                        <div id="viewAllC" onsubmit="renderAll(event)"></div>
                         <div class="circleTxt">View all</div>
                     </div>
+                    
                 </div>
                     <div id="circleOverview">
 
