some small changes :)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </div>
                 <script src="JS/loginUser.js"></script>
         </form>
-        
+        <div id="errorMsg">Incorrect username or password. Try again.</div>
+        <br>
         <button class="collapsible">New? Register here</button>
         
         <div class="content">
