--- a/userProfile.html
+++ b/userProfile.html
@@ -30,9 +30,9 @@
             <div id="progress">
                 <div id="box1">
                         <h3 id="username"></h3>
-                        <a href="index.html">
-                            <div id="logOutBtn">LOG OUT</div>
-                        </a>
+                    
+                            <div id="logOutBtn" onclick="logOutUser(event)">LOG OUT</div>
+              
                         <script src="JS/userprofile.js"></script>
                 <div id="fact-box">
                     <p id="factP">
