Rogue button not working properly

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
                             <div class="circleTxt">New member</div>
                         </div>
                      <div class="circleDiv">
-                        <div id="viewAllC" onclick="renderAll(event)">
+                        <div id="viewAllC" onclick="renderView()">
                         </div>
                         <div class="circleTxt">View all</div>
                     </div>
